tests/ui/errors/snapshots/infer_variadic_type_not_allowed_type_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variadic type not allowed here
   ╭─[test.lis:2:13]
 1 │ 
 2 │ type Args = VarArgs<int>
   ·             ──────┬─────
   ·                   ╰── `VarArgs<T>` is only valid as a function's final parameter
   ╰────
  help: Use `Slice<T>` to hold a collection of values · code: [infer.variadic_type_not_allowed]
