tests/ui/errors/snapshots/infer_while_loop_in_tail_position.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:4:3]
 3 │   let mut n = 0
 4 │   while n < 10 {
   ·   ──┬──
   ·     ╰── evaluates to `()`, but expected `int` here
 5 │     n += 1
   ╰────
  help: `while` loops are for side effects and always evaluate to `()`. Use `loop` with `break <value>` to produce a value during iteration · code: [infer.loop_produces_no_value]
