tests/ui/errors/snapshots/infer_zero_in_defer_has_nothing_to_run.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Nothing to run
   ╭─[test.lis:3:3]
 2 │ fn test() {
 3 │   defer zero<int>()
   ·   ────────┬────────
   ·           ╰── `zero` only produces a value, so `defer` has nothing to run
 4 │ }
   ╰────
  help: Remove the `defer`, or defer the function that uses the value · code: [infer.zero_has_no_effect]
