tests/ui/errors/snapshots/infer_zero_names_the_embedded_field_that_has_no_zero.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `Map<string, int>` has no zero value
   ╭─[test.lis:7:11]
 6 │ fn f() {
 7 │   let _ = zero<Embeds>()
   ·           ───────┬──────
   ·                  ╰── `Map<string, int>` does not satisfy `Zeroable`
 8 │ }
   ╰────
  help: `Map<string, int>` at `Bad.m` is a map, whose Go zero is nil. `Embeds { .. }` creates the map, but generic code cannot, so `Embeds` is not `Zeroable` · code: [infer.not_zeroable_bound]
