tests/ui/errors/snapshots/infer_zero_names_the_field_that_has_no_zero.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `fn (int) -> int` has no zero value
   ╭─[test.lis:5:11]
 4 │ fn test() {
 5 │   let s = zero<HasFn>()
   ·           ──────┬──────
   ·                 ╰── `fn (int) -> int` does not satisfy `Zeroable`
 6 │ }
   ╰────
  help: `Zeroable` admits only types whose zero value Lisette can produce, and `fn (int) -> int` at `f` has none. Build this value explicitly instead, e.g. `Map.new<K, V>()` for a map or `Channel.new<T>()` for a channel · code: [infer.not_zeroable_bound]
