tests/ui/errors/snapshots/infer_zero_names_the_map_field_that_has_no_zero.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `Map<string, int>` has no zero value
   ╭─[test.lis:5:11]
 4 │ fn test() {
 5 │   let s = zero<HasMap>()
   ·           ───────┬──────
   ·                  ╰── `Map<string, int>` does not satisfy `Zeroable`
 6 │ }
   ╰────
  help: `Map<string, int>` at `m` is a map, whose Go zero is nil. `HasMap { .. }` creates the map, but generic code cannot, so `HasMap` is not `Zeroable` · code: [infer.not_zeroable_bound]
