tests/ui/errors/snapshots/infer_zero_names_the_package_that_owns_the_private_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `Point` has no zero value
   ╭─[main.lis:5:11]
 4 │ fn main() {
 5 │   let p = zero<shapes.Point>();
   ·           ──────────┬─────────
   ·                     ╰── `Point` does not satisfy `Zeroable`
 6 │ }
   ╰────
  help: `Point.x` is private to package `shapes`, so Lisette cannot produce a zero for it. Build the value through a constructor that `shapes` exposes · code: [infer.not_zeroable_bound]
